[package]
name = "data_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.2"
egui_extras = {version="0.26.2", features= ["default", "image"]}
egui_plot = "0.26.2"
env_logger = { version = "0.11", features = [
    "auto-color",
    "humantime",
] }
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.3"
serialport = "4.3.0"
thiserror = "1.0.57"
